--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Artificial-Intelligence-Applications.Rproj
 # Session Data files
 .RData
 CopyOfsudoku.z3
+AI2022_PE1_7026821_7025902_7013994.zip
 # User-specific files
 .Ruserdata
 
